# multiOptions

./: .gitignore  CMakeLists.txt  run
src/: main.cpp
